# recognize

./: .gitignore  CLAUDE.md  CMakeLists.txt  HOMEBREW_PUBLISHING_GUIDE.md  INSTALL.md  LICENSE  Makefile  README.md  TUTORIAL.md  audio_processor.cpp  audio_processor.h  build.sh  cli_parser.cpp  cli_parser.h  config_manager.cpp  config_manager.h  create-homebrew-tap.sh  export_manager.cpp  export_manager.h  history_manager.cpp  history_manager.h  install.sh  meeting_manager.cpp  meeting_manager.h  model_manager.cpp  model_manager.h  prepare-release.sh  ptt_manager.cpp  ptt_manager.h  recognize.cpp  recognize.rb  session_types.h  text_processing.cpp  text_processing.h  whisper-stream-coreml.cpp  whisper-stream-coreml.rb  whisper_params.h
.github/workflows/: release.yml
Formula/: recognize-binary.rb  recognize.rb
docs/plans/: 2026-03-11-recognize-refactor-design.md  2026-03-11-recognize-refactor-plan.md  2026-03-11-transcription-history-design.md  2026-03-12-distribution-design.md  2026-03-12-distribution-plan.md  2026-03-13-plugin-modernization.md  2026-03-13-ptt-optimization.md
homebrew/: recognize.rb
plugin/: marketplace.json
plugin/.claude-plugin/: plugin.json
plugin/commands/: r.md  rc.md  recognize-stop.md  recognize.md  rh.md  rp.md  rs.md
plugin/scripts/: asr-correction.md  claude-launch.sh  claude-stop.sh  setup.sh
plugin/skills/history/: SKILL.md
plugin/skills/meeting/: SKILL.md
plugin/skills/ptt/: SKILL.md
plugin/skills/start/: SKILL.md
plugin/skills/stop/: SKILL.md
tests/: test_text_processing.cpp
voiclaude/: Makefile  README.md  __init__.py  __main__.py  config.py  debug_server.py  diagnose_claude_connection.py  install.sh  mcp_server.py  mcp_server_standard.py  requirements.txt  run.py  setup.py  test_claude_prompt_discovery.py  test_config.py  test_full_connection.py  test_mcp.py  test_mcp_discovery.py  voice_handler.py
voiclaude/voiclaude.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
